# mizan

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_PROMPT.md  README.md  SECURITY.md  components.json  dev  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: claude.md  codex-reviewer.md  data.md  qa.md  tourguide.md  ui.md
.claude/hooks/: enforce-research-first.sh  mark-research-done.sh
.codex/: config.toml
.codex/agents/: code-mapper.toml  (+3 more)
.do/: app.yaml
.github/: FUNDING.yml  pull_request_template.md
.husky/: pre-commit
app/: .env.example  .gitignore  convex.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
backups/: dev-backup-20260406  prod-backup-20260406
convex/: adminDashboard.ts  budget.ts  constitution.ts  council.ts  crons.ts  dataRefresh.ts  debt.ts  government.ts  lineage.ts  parliament.ts  schema.ts  seedConstitutionMissing.ts  seedData.ts
docs/: ARCH_SYNC  ROADMAP.md  agent-development.md  ai-data-pipeline.md  architecture.md  convex-cost-analysis.md  database-erd.md  database.md  deployment.md  driver-js-reference.md  features-roadmap.md  features.md
infra/: README.md  cloudflare.tf  digitalocean.tf  github.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: generate_reference_data.py
scripts/dev/: __init__.py  __main__.py  cli.py  pyproject.toml
scripts/dev/commands/: __init__.py  bug.py  db.py  deploy.py  health.py  infra.py  release.py  security.py  start.py
(+217 files in other folders)
